--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -61,7 +61,6 @@ html
   box-sizing: inherit
 
 
-
 body
   height: 100vh
 
@@ -71,35 +70,41 @@ body
 .emailFormWrapper
   display: flex
   width: 340px
-  height: 300px
+  min-height: 300px
   background-color: rgba(0, 0, 0, 0.53)
   border: 1px solid rgba(218, 37, 29, 0.41)
   padding: 20px
+
   .inputField
     padding: 0 0 0 15px
     border: 1px solid rgba(218, 37, 29, 0.41)
     width: 100%
     height: 50px
-    margin-bottom: 15px
+    margin-bottom: 17px
     font-size: 14px
+
   .button
-    display: flex
-    justify-content: center
-    align-items: center
-    width: 100%
-    height: 45px
-    background-color: #DA251D
-    cursor: pointer
-    transition: 0.2s ease
-    &:hover
+    button
+      display: flex
+      justify-content: center
+      align-items: center
+      width: 100%
+      height: 45px
+      background-color: #DA251D
+      cursor: pointer
       transition: 0.2s ease
-      background-color: #a01b14
-    &:active
-      background-color: #fc2b22
-    h4
-      font-size: 18px
-      font-family: "Scada Bold", "sans-serif"
-      color: white
+
+      &:hover
+        transition: 0.2s ease
+        background-color: #a01b14
+
+      &:active
+        background-color: #fc2b22
+
+      h4
+        font-size: 18px
+        font-family: "Scada Bold", "sans-serif"
+        color: white
 
   .infoText
     display: flex
@@ -113,8 +118,30 @@ body
       font-family: "Raleway", "sans-serif"
       color: rgba(255, 255, 255, 0.88)
 
+  .error
+    border: 2px red solid
 
-
+  .errorMessage
+    position: relative
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+    height: 30px
+    color: #ffffff
+    font-weight: bold
+    background-color: #DA251D
+    margin-bottom: 17px
+    border: 2px #DA251D solid
+    &:before
+      content: ""
+      border: solid transparent
+      position: absolute
+      bottom: 100%
+      left: 50%
+      border-bottom-color: #DA251D
+      border-width: 9px
+      margin-left: -9px
 
 
 .appWrapper
@@ -375,10 +402,10 @@ body
           outline: none
           color: rgba(255, 255, 255, 0.84)
           font-size: 16px
+
       &:hover
         opacity: 1
         transition: 0.2s ease-in
-
 
 
     .email
@@ -405,6 +432,7 @@ body
           outline: none
           color: rgba(255, 255, 255, 0.84)
           font-size: 16px
+
       &:hover
         opacity: 1
         transition: 0.2s ease-in
@@ -433,6 +461,7 @@ body
           outline: none
           color: rgba(255, 255, 255, 0.84)
           font-size: 16px
+
       &:hover
         opacity: 1
         transition: 0.2s ease-in
