--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -68,80 +68,109 @@ body
   margin: 0 100px
 
 .emailFormWrapper
-  display: flex
-  width: 340px
-  min-height: 300px
-  background-color: rgba(0, 0, 0, 0.53)
-  border: 1px solid rgba(218, 37, 29, 0.41)
-  padding: 20px
-
-  .inputField
-    padding: 0 0 0 15px
+  .requestForm
+    display: flex
+    width: 340px
+    min-height: 300px
+    background-color: rgba(0, 0, 0, 0.53)
     border: 1px solid rgba(218, 37, 29, 0.41)
-    width: 100%
-    height: 50px
-    margin-bottom: 17px
-    font-size: 14px
+    padding: 20px
 
-  .button
-    button
+
+    .inputField
+      padding: 0 0 0 15px
+      border: 1px solid rgba(218, 37, 29, 0.41)
+      width: 100%
+      height: 50px
+      margin-bottom: 17px
+      font-size: 14px
+
+    .button
+      button
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 100%
+        height: 45px
+        background-color: #DA251D
+        cursor: pointer
+        transition: 0.2s ease
+
+        &:hover
+          transition: 0.2s ease
+          background-color: #a01b14
+
+        &:active
+          background-color: #fc2b22
+
+        h4
+          font-size: 18px
+          font-family: "Scada Bold", "sans-serif"
+          color: white
+
+    .infoText
+      display: flex
+
+
+      p
+        margin-top: 10px
+        text-align: justify
+        font-size: 13px
+        line-height: 1.4
+        font-family: "Raleway", "sans-serif"
+        color: rgba(255, 255, 255, 0.88)
+
+    .error
+      border: 2px red solid
+
+    .errorMessage
+      position: relative
       display: flex
       justify-content: center
       align-items: center
       width: 100%
-      height: 45px
+      height: 30px
+      color: #ffffff
+      font-weight: bold
       background-color: #DA251D
-      cursor: pointer
-      transition: 0.2s ease
+      margin-bottom: 17px
+      border: 2px #DA251D solid
 
-      &:hover
-        transition: 0.2s ease
-        background-color: #a01b14
+      &:before
+        content: ""
+        border: solid transparent
+        position: absolute
+        bottom: 100%
+        left: 50%
+        border-bottom-color: #DA251D
+        border-width: 9px
+        margin-left: -9px
 
-      &:active
-        background-color: #fc2b22
-
-      h4
-        font-size: 18px
-        font-family: "Scada Bold", "sans-serif"
-        color: white
-
-  .infoText
+  .responseForm
     display: flex
+    flex-direction: column
+    width: 340px
+    min-height: 300px
+    background-color: rgba(255, 255, 255, 0.84)
+    border: 1px solid rgba(218, 37, 29, 0.41)
+    padding: 20px
+    font-family: "Raleway", "sans-serif"
 
+    h3
+      font-size: 33px
+      line-height: 1.2
+      text-align: center
+      padding-bottom: 5px
+      margin-bottom: 10px
+      border-bottom: 1px solid #DA251D
 
     p
-      margin-top: 10px
-      text-align: justify
-      font-size: 13px
-      line-height: 1.4
-      font-family: "Raleway", "sans-serif"
-      color: rgba(255, 255, 255, 0.88)
+      text-align: center
+      font-size: 20px
+      line-height: 1.5
 
-  .error
-    border: 2px red solid
-
-  .errorMessage
-    position: relative
-    display: flex
-    justify-content: center
-    align-items: center
-    width: 100%
-    height: 30px
-    color: #ffffff
-    font-weight: bold
-    background-color: #DA251D
-    margin-bottom: 17px
-    border: 2px #DA251D solid
-    &:before
-      content: ""
-      border: solid transparent
-      position: absolute
-      bottom: 100%
-      left: 50%
-      border-bottom-color: #DA251D
-      border-width: 9px
-      margin-left: -9px
+      b
+        font-family: "Scada Bold", "sans-serif"
 
 
 .appWrapper
@@ -216,18 +245,23 @@ body
             outline: none
             padding: 20px 15px
             text-transform: uppercase
-            font-family: "Scada"
+            font-family: "Scada", "sans-serif"
             font-size: 17px
             transition: 0.20s ease-in
             cursor: pointer
             color: #333
             letter-spacing: -0.5px
 
+            &.active
+              color: #DA251D
+              text-shadow: #DA251D 0 0 1px
+
 
           &:hover
             a
               transition: 0.20s ease-in
               color: #DA251D
+              text-shadow: #DA251D 0 0 1px
 
 
     .navbarContacts
@@ -253,6 +287,9 @@ body
           padding-left: 10px
           font-weight: 700
 
+    .burgerMenu
+      display: none
+
   .homeWrapper
     display: flex
     flex-direction: column
@@ -267,11 +304,8 @@ body
       left: 0
       width: 100%
       height: 100%
-      background: rgba(0, 0, 0, .73)
-
 
       img
-
         z-index: 1
         width: 100%
         height: auto
@@ -467,4 +501,264 @@ body
         transition: 0.2s ease-in
 
 
+@media (max-width: 767px)
+  .container
+    margin: 0
+    padding: 0
+  .appWrapper
+    height: 100vh
+    display: grid
+    grid-template-columns: 100vw
+    grid-template-rows: 50px 1fr 70px
+    row-gap: 20px
+    padding: 0
+    background-blend-mode: color
+    -moz-background-size: 100%
+    -webkit-background-size: 100%
+    -o-background-size: 100%
+    background-size: 100%
 
+    .navbarWrapper
+      margin-top: 0
+      height: 50px
+      background-color: rgb(218, 37, 29)
+      position: fixed
+      left: 0
+      right: 0
+      z-index: 50
+
+      .logo
+        background-color: rgba(218, 37, 29, 0)
+        width: 280px
+
+        img
+          width: 40px
+
+        .logoText
+          p
+            font-size: 23px
+
+          span
+            font-size: 9px
+
+
+      .navbarMenu
+        display: none
+
+        &.active
+          z-index: 15
+          background-color: rgba(255, 255, 255, 1)
+          display: block
+          position: fixed
+          left: 0
+          top: 50px
+          bottom: 0
+          right: 0
+          height: 100%
+
+          ul
+            display: block
+
+            li
+              padding: 20px 0
+            text-align: right
+
+
+      .navbarContacts
+        display: none
+
+      .burgerMenu
+        display: block
+        position: relative
+        width: 30px
+        height: 20px
+        margin-right: 15px
+
+        &:before, &:after
+          position: absolute
+          content: ""
+          width: 100%
+          height: 2px
+          left: 0
+          background-color: white
+          transition: all 0.2s ease 0.2s
+
+        &:before
+          top: 0
+
+        &:after
+          bottom: 0
+
+        span
+          position: absolute
+          width: 100%
+          height: 2px
+          left: 0
+          background-color: white
+          top: 9px
+          transition: all 0.11s ease 0.2s
+
+        &.active
+
+          span
+            opacity: 0
+            transition: all 0.11s ease
+
+          &:before
+            transform: rotate(45deg)
+            transition: all 0.11s ease
+            top: 9px
+
+          &:after
+            transform: rotate(-45deg)
+            transition: all 0.15s ease
+            bottom: 9px
+
+
+    .homeWrapper
+      padding: 0 25px
+
+      .background
+        left: -300px
+
+        img
+          width: auto
+          height: 100%
+
+        &:after
+          background: rgba(0, 0, 0, 0.85)
+
+
+      .headerContent
+        display: grid
+        grid-template-columns: 1fr
+
+        .leftSide
+          .header
+            padding-top: 40px
+
+            h1
+              font-size: 40px
+
+          .headerText
+            max-width: 100%
+            padding-top: 30px
+
+            h2
+              font-size: 27px
+
+          .headerIcons
+            margin-bottom: 40px
+
+            .iconItemWrapper
+              padding: 4px 0
+
+              .iconItem
+                span
+                  &:first-child
+                    font-size: 40px
+
+                  &:last-child
+                    font-size: 22px
+
+        .rightSide
+          margin-bottom: 10px
+
+    .footerWrapper
+      .findUs
+        .icon
+          margin-bottom: 5px
+
+          a
+            font-size: 30px
+
+
+      .email
+        .icon
+          margin-bottom: 5px
+
+          a
+            font-size: 30px
+
+      .phone
+        .icon
+          margin-bottom: 5px
+
+          a
+            font-size: 30px
+
+@media (max-width: 520px)
+  .emailFormWrapper
+    .requestForm
+      width: 290px
+
+    .responseForm
+      width: 290px
+
+  .appWrapper
+    grid-template-rows: 50px 1fr 160px
+
+    .homeWrapper
+      padding: 0 10px
+
+      .headerContent
+        .leftSide
+
+
+          .header
+            padding-top: 20px
+            h1
+              font-size: 30px
+
+          .headerText
+            h2
+              font-size: 20px
+              line-height: 1.4
+
+          .headerIcons
+            margin-bottom: 30px
+            padding-top: 30px
+            .iconItemWrapper
+              .iconItem
+                span
+                 &:last-child
+                   font-size: 17px
+
+    .footerWrapper
+      padding: 0 15px
+      align-items: flex-start
+      justify-content: center
+      flex-direction: column
+
+      .findUs
+        padding-bottom: 10px
+        flex-direction: row
+
+        .icon
+          padding-right: 20px
+          margin-bottom: 5px
+
+          a
+            font-size: 30px
+
+
+      .email
+        padding-bottom: 10px
+        flex-direction: row
+
+        .icon
+          padding-right: 20px
+          margin-bottom: 5px
+
+          a
+            font-size: 30px
+
+      .phone
+        flex-direction: row
+
+        .icon
+          padding-right: 20px
+          margin-bottom: 5px
+
+          a
+            font-size: 30px
