--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -310,17 +310,6 @@ body
         width: 100%
         height: auto
 
-
-      &:after
-        background: rgba(0, 0, 0, .7)
-        z-index: 2
-        content: ''
-        position: fixed
-        top: 0
-        left: 0
-        width: 100%
-        height: 100%
-
     .headerContent
       z-index: 15
       display: grid
@@ -501,10 +490,224 @@ body
         transition: 0.2s ease-in
 
 
+@media (max-width: 1024px)
+  .appWrapper
+    grid-template-columns: 100vw
+
+    .container
+      margin: 0
+
+      .navbarWrapper
+        margin-top: 0
+        background-color: #da251d
+
+        .navbarMenu
+          z-index: 15
+          background-color: rgba(255, 255, 255, 1)
+          position: fixed
+          left: 100%
+          top: 100px
+          width: 100%
+          height: 100%
+          transition: all 0.3s ease
+
+          ul
+            display: block
+
+            li
+              padding: 20px 0
+              text-align: right
+
+          &.active
+            left: 0
+
+        .navbarContacts
+          a
+            span
+              color: white
+
+        .burgerMenu
+          display: block
+          position: relative
+          width: 30px
+          height: 20px
+          margin-right: 15px
+
+          &:before, &:after
+            position: absolute
+            content: ""
+            width: 100%
+            height: 2px
+            left: 0
+            background-color: white
+            transition: all 0.2s ease 0.2s
+
+          &:before
+            top: 0
+
+          &:after
+            bottom: 0
+
+          span
+            position: absolute
+            width: 100%
+            height: 2px
+            left: 0
+            background-color: white
+            top: 9px
+            transition: all 0.11s ease 0.2s
+
+          &.active
+
+            span
+              opacity: 0
+              transition: all 0.11s ease
+
+            &:before
+              transform: rotate(45deg)
+              transition: all 0.11s ease
+              top: 9px
+
+            &:after
+              transform: rotate(-45deg)
+              transition: all 0.15s ease
+              bottom: 9px
+
+      .homeWrapper
+        padding: 0 20px
+
+        .background
+          left: -164px
+
+          img
+            height: 100%
+            width: auto
+
+          &.horizontal
+            left: 0
+
+            img
+              height: 100%
+              width: auto
+
+        .headerContent
+          grid-template-columns: 1fr
+          position: relative
+          z-index: 10
+          padding: 0 35px
+
+          &.horizontal
+            grid-template-columns: 1fr 1fr
+            padding: 0
+
+            .leftSide
+              .header
+                padding-top: 0
+
+                h1
+                  font-size: 48px
+                  border-bottom: 4px solid #DA251D
+                  margin: 0
+
+              .headerText
+                padding-top: 28px
+
+                h2
+                  font-size: 27px
+
+              .headerIcons
+                .iconItemWrapper
+                  padding: 7px 0
+
+                  .iconItem
+                    span
+                      &:first-child
+                        font-size: 45px
+
+                      &:last-child
+                        font-size: 22px
+
+          .leftSide
+            .header
+              padding-top: 10px
+
+              h1
+                font-size: 70px
+                border-bottom: 5px solid #DA251D
+                margin-bottom: 10px
+
+            .headerText
+              h2
+                font-size: 35px
+
+            .headerIcons
+              .iconItemWrapper
+                padding: 7px 0
+
+                .iconItem
+                  span
+                    &:first-child
+                      font-size: 45px
+
+                    &:last-child
+                      font-size: 22px
+
+@media (max-width: 820px)
+  .emailFormWrapper
+    margin-top: 15px
+
+    .requestForm
+      width: 100%
+      min-height: 200px
+
+      form
+        .inputField
+          height: 40px
+
+        .button
+          button
+            height: 40px
+
+    .responseForm
+      width: 100%
+      min-height: 200px
+
+      h3
+        font-size: 30px
+
+      p
+        font-size: 18px
+  .appWrapper
+    grid-template-rows: 115px 1fr 100px
+
+    .container
+      .homeWrapper
+        .background
+          &.horizontal
+            left: 0
+
+            img
+              height: auto
+              width: 100%
+
+        .headerContent
+          grid-template-columns: 1fr
+
+          &.horizontal
+            grid-template-columns: 1fr
+
+          .leftSide
+            .header
+              h1
+                font-size: 50px
+
+            .headerText
+              padding-top: 22px
+
+
 @media (max-width: 767px)
-  .container
-    margin: 0
-    padding: 0
+
+
   .appWrapper
     height: 100vh
     display: grid
@@ -518,151 +721,137 @@ body
     -o-background-size: 100%
     background-size: 100%
 
-    .navbarWrapper
-      margin-top: 0
-      height: 50px
-      background-color: rgb(218, 37, 29)
-      position: fixed
-      left: 0
-      right: 0
-      z-index: 50
+    .container
+      margin: 0
+      padding: 0
 
-      .logo
-        background-color: rgba(218, 37, 29, 0)
-        width: 280px
+      .navbarWrapper
+        margin-top: 0
+        height: 50px
+        background-color: rgb(218, 37, 29)
+        position: fixed
+        left: 0
+        right: 0
+        z-index: 50
 
-        img
-          width: 40px
+        .logo
+          background-color: rgba(218, 37, 29, 0)
+          width: 280px
 
-        .logoText
-          p
-            font-size: 23px
+          img
+            width: 40px
 
-          span
-            font-size: 9px
+          .logoText
+            p
+              font-size: 23px
 
+            span
+              font-size: 9px
 
-      .navbarMenu
-        display: none
-
-        &.active
-          z-index: 15
-          background-color: rgba(255, 255, 255, 1)
-          display: block
-          position: fixed
-          left: 0
+        .navbarMenu
           top: 50px
-          bottom: 0
-          right: 0
-          height: 100%
 
-          ul
-            display: block
+        .navbarContacts
+          display: none
 
-            li
-              padding: 20px 0
-            text-align: right
+        .burgerMenu
+          display: block
+          position: relative
+          width: 30px
+          height: 20px
+          margin-right: 15px
 
-
-      .navbarContacts
-        display: none
-
-      .burgerMenu
-        display: block
-        position: relative
-        width: 30px
-        height: 20px
-        margin-right: 15px
-
-        &:before, &:after
-          position: absolute
-          content: ""
-          width: 100%
-          height: 2px
-          left: 0
-          background-color: white
-          transition: all 0.2s ease 0.2s
-
-        &:before
-          top: 0
-
-        &:after
-          bottom: 0
-
-        span
-          position: absolute
-          width: 100%
-          height: 2px
-          left: 0
-          background-color: white
-          top: 9px
-          transition: all 0.11s ease 0.2s
-
-        &.active
-
-          span
-            opacity: 0
-            transition: all 0.11s ease
+          &:before, &:after
+            position: absolute
+            content: ""
+            width: 100%
+            height: 2px
+            left: 0
+            background-color: white
+            transition: all 0.2s ease 0.2s
 
           &:before
-            transform: rotate(45deg)
-            transition: all 0.11s ease
-            top: 9px
+            top: 0
 
           &:after
-            transform: rotate(-45deg)
-            transition: all 0.15s ease
-            bottom: 9px
+            bottom: 0
+
+          span
+            position: absolute
+            width: 100%
+            height: 2px
+            left: 0
+            background-color: white
+            top: 9px
+            transition: all 0.11s ease 0.2s
+
+          &.active
+
+            span
+              opacity: 0
+              transition: all 0.11s ease
+
+            &:before
+              transform: rotate(45deg)
+              transition: all 0.11s ease
+              top: 9px
+
+            &:after
+              transform: rotate(-45deg)
+              transition: all 0.15s ease
+              bottom: 9px
 
 
-    .homeWrapper
-      padding: 0 25px
+      .homeWrapper
+        padding: 0 25px
 
-      .background
-        left: -300px
+        .background
+          left: -240px
 
-        img
-          width: auto
-          height: 100%
+          img
+            width: auto
+            height: 100%
 
-        &:after
-          background: rgba(0, 0, 0, 0.85)
+          &.horizontal
+            left: 0
+
+            img
+              width: 100%
+              height: auto
 
 
-      .headerContent
-        display: grid
-        grid-template-columns: 1fr
+        .headerContent
 
-        .leftSide
-          .header
-            padding-top: 40px
+          .leftSide
+            .header
+              padding-top: 40px
 
-            h1
-              font-size: 40px
+              h1
+                font-size: 40px
 
-          .headerText
-            max-width: 100%
-            padding-top: 30px
+            .headerText
+              max-width: 100%
+              padding-top: 30px
 
-            h2
-              font-size: 27px
+              h2
+                font-size: 27px
 
-          .headerIcons
-            margin-bottom: 40px
+            .headerIcons
+              margin-bottom: 40px
 
-            .iconItemWrapper
-              padding: 4px 0
+              .iconItemWrapper
+                padding: 4px 0
 
-              .iconItem
-                span
-                  &:first-child
-                    font-size: 40px
+                .iconItem
+                  span
+                    &:first-child
+                      font-size: 40px
 
-                  &:last-child
-                    font-size: 22px
+                    &:last-child
+                      font-size: 22px
 
-        .rightSide
-          margin-bottom: 10px
+          .rightSide
+            margin-bottom: 10px
 
     .footerWrapper
       .findUs
@@ -686,79 +875,168 @@ body
 
           a
             font-size: 30px
+
 
 @media (max-width: 520px)
   .emailFormWrapper
     .requestForm
-      width: 290px
+      width: 380px
+
+      form
+        .inputField
+          height: 40px
+
+        .button
+          button
+            height: 40px
 
     .responseForm
-      width: 290px
+      width: 380px
+      min-height: 200px
+
+      h3
+        font-size: 30px
+
+      p
+        font-size: 18px
 
   .appWrapper
     grid-template-rows: 50px 1fr 160px
 
-    .homeWrapper
-      padding: 0 10px
+    .container
+      .homeWrapper
+        padding: 0 10px
 
-      .headerContent
-        .leftSide
+        .headerContent
+          padding: 0
+          .leftSide
 
 
-          .header
-            padding-top: 20px
-            h1
+            .header
+              padding-top: 20px
+
+              h1
+                font-size: 30px
+                border-bottom: 3px solid #DA251D
+
+            .headerText
+              h2
+                font-size: 20px
+                line-height: 1.4
+
+            .headerIcons
+              margin-bottom: 30px
+              padding-top: 30px
+
+              .iconItemWrapper
+                .iconItem
+                  span
+                    &:first-child
+                      font-size: 44px
+
+                    &:last-child
+                      font-size: 23px
+
+      .footerWrapper
+        padding: 0 15px
+        align-items: flex-start
+        justify-content: center
+        flex-direction: column
+
+        .findUs
+          padding-bottom: 10px
+          flex-direction: row
+
+          .icon
+            padding-right: 20px
+            margin-bottom: 5px
+
+            a
               font-size: 30px
 
-          .headerText
-            h2
-              font-size: 20px
-              line-height: 1.4
 
-          .headerIcons
-            margin-bottom: 30px
-            padding-top: 30px
-            .iconItemWrapper
-              .iconItem
-                span
-                 &:last-child
-                   font-size: 17px
+        .email
+          padding-bottom: 10px
+          flex-direction: row
 
-    .footerWrapper
-      padding: 0 15px
-      align-items: flex-start
-      justify-content: center
-      flex-direction: column
+          .icon
+            padding-right: 20px
+            margin-bottom: 5px
 
-      .findUs
-        padding-bottom: 10px
-        flex-direction: row
+            a
+              font-size: 30px
 
-        .icon
-          padding-right: 20px
-          margin-bottom: 5px
+        .phone
+          flex-direction: row
 
-          a
-            font-size: 30px
+          .icon
+            padding-right: 20px
+            margin-bottom: 5px
+
+            a
+              font-size: 30px
+
+@media (max-width: 408px)
+  .emailFormWrapper
+    .requestForm
+      width: 100%
+
+    .responseForm
+      width: 100%
+      min-height: 200px
+
+      h3
+        font-size: 24px
+
+      p
+        font-size: 14px
 
 
-      .email
-        padding-bottom: 10px
-        flex-direction: row
+  .appWrapper
+    .container
+      .homeWrapper
+        .headerContent
+          .leftSide
+            .headerIcons
+              .iconItemWrapper
+                .iconItem
+                  span
+                    &:first-child
+                      font-size: 40px
 
-        .icon
-          padding-right: 20px
-          margin-bottom: 5px
+                    &:last-child
+                      font-size: 21px
 
-          a
-            font-size: 30px
+@media (max-width: 361px)
+  .emailFormWrapper
+    .errorMessage
+      font-size: 14px
 
-      .phone
-        flex-direction: row
 
-        .icon
-          padding-right: 20px
-          margin-bottom: 5px
 
-          a
-            font-size: 30px
+  .appWrapper
+    .container
+      .navbarWrapper
+        .logo
+          img
+            width: 35px
+
+          .logoText
+            p
+              font-size: 21px
+
+            span
+              font-size: 8px
+
+      .homeWrapper
+        .headerContent
+          .leftSide
+            .headerIcons
+              .iconItemWrapper
+                .iconItem
+                  span
+                    &:first-child
+                      font-size: 40px
+
+                    &:last-child
+                      font-size: 17px
