--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -299,8 +299,6 @@ body
     flex-direction: column
     height: 100%
     position: relative
-
-
     .background
       z-index: 5
       position: fixed
@@ -395,6 +393,44 @@ body
         display: flex
         justify-content: center
         align-items: center
+
+  .contactsWrapper
+    .background
+      z-index: 1
+      position: fixed
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+
+      img
+        z-index: 1
+        width: 100%
+        height: auto
+    h1
+      font-size: 50px
+      font-family: "Raleway", "sans-serif"
+      font-weight: 600
+      color: rgba(255, 255, 255, 0.84)
+      border-bottom: 5px solid #DA251D
+    .contactsContent
+      position: relative
+      z-index: 2
+      .leftSide
+        .contacts
+          .block-item
+            .icon
+
+            .title
+
+            .text
+
+      .rightSide
+        .emailFormWrapper
+
+    .map
+
+    .requisites
 
   .footerWrapper
     position: relative
